# 231-swe-363-project

./: .gitignore  LICENSE  README.org  package-lock.json  package.json
BackEnd/: notificationModule.js  package-lock.json  package.json  service-worker.js
BackEnd/DB/: APIDOC.md  DBcontroller.js  api.js  db.db  dbinit.sql  index.js  init.js  service-worker.js  test.js
misc/adapter/: Cargo.toml  flake.nix  schema.graphql
misc/adapter/adapter/: Cargo.toml
misc/adapter/adapter/src/: main.rs
misc/adapter/adapter_core/: Cargo.toml
misc/adapter/adapter_core/src/: adapters.rs
misc/adapter/assets/: tamimi_categories.ron  tamimi_products.ron
misc/scraping/: flake.nix  scrape_tamimi.py
my-app/: .gitignore  flake.nix  houdini.config.js  package-lock.json  package.json  pnpm-lock.yaml  schema.graphql  tailwind.config.cjs
my-app/src/: app.html  client.ts  hooks.server.ts  service-worker.js
my-app/src/lib/: Branding.svelte  FilterPane.svelte  category.svelte  compare.svelte  dropdown.svelte  filter.js  footer.svelte  navbar.svelte  product.svelte  search.svelte  setting.svelte  table.svelte  variants.svelte
my-app/src/lib/BackEnd/: notificationModule.js  package-lock.json  package.json  service-worker.js
my-app/src/lib/BackEnd/DB/: APIDOC.md  DBcontroller.js  dbinit.sql  index.js  service-worker.js  test.html  test.js
my-app/src/routes/: +layout.gql  +layout.svelte  +page.svelte
my-app/src/routes/api/: +server.js  routes.txt
my-app/src/routes/product/: +page.gql  +page.js  +page.svelte  information.svelte  product.svelte
(+17 files in other folders)
