[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adapter_core = { version = "0.1.0", path = "../adapter_core" }
ron = "0.8.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
trustfall = "0.7.1"
